--- a/code/logic/CMakeLists.txt
+++ b/code/logic/CMakeLists.txt
@@ -91,6 +91,8 @@ add_subdirectory(sensation/directionofmovement)
 add_subdirectory(sensation/echolocation)
 add_subdirectory(sensation/geolocation)
 add_subdirectory(sensation/opticalflow)
+add_subdirectory(adaptation/ksamserver)
+add_subdirectory(adaptation/ksamclient)
 
 ###########################################################################
 # Create packages for selected Linux distributions.
