--- a/usecases/latest/test-smartvehicle/docker-compose.yml
+++ b/usecases/latest/test-smartvehicle/docker-compose.yml
@@ -52,18 +52,58 @@ services:
         ipc: host
         command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamserver --cid=${CID}"
 
-    # microservice for core-tool-camera-replay
-    core-tool-camera-replay:
+ # microservice for odsimvehicle
+    odsimvehicle:
         build: .
-        working_dir: /opt/Videos/
+        depends_on:
+            - odsupercomponent
+        working_dir: /opt/opendlv.data/
+        volumes:
+            - /tmp/.X11-unix:/tmp/.X11-unix
+            - .:/opt/opendlv.data
+        network_mode: host
+        ipc: host
+        command: "/opt/od4/bin/odsimvehicle --cid=${CID} --freq=10"
+
+ # microservice for odsimirus
+    odsimirus:
+        build: .
+        depends_on:
+            - odsupercomponent
+        working_dir: /opt/opendlv.data/
+        volumes:
+            - /tmp/.X11-unix:/tmp/.X11-unix
+            - .:/opt/opendlv.data
+        network_mode: host
+        ipc: host
+        command: "/opt/od4/bin/odsimirus --cid=${CID} --freq=10"
+
+ # microservice for odcockpit
+    odcockpit:
+        build: .
         depends_on:
             - odsupercomponent
         environment:
             - DISPLAY=$DISPLAY
+        working_dir: /opt/opendlv.data/
         volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix
-            - .:/opt/opendlv.core.configuration
-            - .:/opt/Videos/
+            - .:/opt/opendlv.data
         network_mode: host
         ipc: host
-        command: "/opt/opendlv.core/bin/opendlv-core-tool-camera-replay --cid=${CID} --freq=500"
+        command: "/opt/od4/bin/odcockpit --cid=${CID}"
+
+ # microservice for odsimcamera
+    odsimcamera:
+        build: .
+        depends_on:
+            - odsupercomponent
+        environment:
+            - DISPLAY=$DISPLAY
+        working_dir: /opt/opendlv.data/
+        volumes:
+            - /tmp/.X11-unix:/tmp/.X11-unix
+            - .:/opt/opendlv.data
+        network_mode: host
+        ipc: host
+        command: "/opt/od4/bin/odsimcamera --cid=${CID} --freq=10"
