--- a/usecases/latest/test-smartvehicle/docker-compose.yml
+++ b/usecases/latest/test-smartvehicle/docker-compose.yml
@@ -53,46 +53,46 @@ services:
         ipc: host
         command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamserver --id=4 --cid=${CID}"
 
- # microservice for knowledge-v2vdenm -- use for the CRASH use case
-    knowledge-v2vdenm0:
-       build: .
-       working_dir: /opt/opendlv.data/
-       volumes:
-           - /tmp/.X11-unix:/tmp/.X11-unix
-           - .:/opt/opendlv.data
-       network_mode: host
-       ipc: host
-       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID}"
-
- # microservice for knowledge-v2vdenm -- use for the CRASH use case
-    knowledge-v2vdenm1:
-       build: .
-       working_dir: /opt/opendlv.data/
-       volumes:
-           - /tmp/.X11-unix:/tmp/.X11-unix
-           - .:/opt/opendlv.data
-       network_mode: host
-       ipc: host
-       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID} --id=1"
-
- # microservice for knowledge-v2vcam
-    knowledge-v2vcam0:
-        build: .
-        working_dir: /opt/opendlv.data/
-        volumes:
-            - /tmp/.X11-unix:/tmp/.X11-unix
-            - .:/opt/opendlv.data
-        network_mode: host
-        ipc: host
-        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID}"
-
- # microservice for knowledge-v2vcam
-    knowledge-v2vcam1:
-        build: .
-        working_dir: /opt/opendlv.data/
-        volumes:
-            - /tmp/.X11-unix:/tmp/.X11-unix
-            - .:/opt/opendlv.data
-        network_mode: host
-        ipc: host
-        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID} --id=1"
+# # microservice for knowledge-v2vdenm -- use for the CRASH use case
+#    knowledge-v2vdenm0:
+#       build: .
+#       working_dir: /opt/opendlv.data/
+#       volumes:
+#           - /tmp/.X11-unix:/tmp/.X11-unix
+#           - .:/opt/opendlv.data
+#       network_mode: host
+#       ipc: host
+#       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID}"
+#
+# # microservice for knowledge-v2vdenm -- use for the CRASH use case
+#    knowledge-v2vdenm1:
+#       build: .
+#       working_dir: /opt/opendlv.data/
+#       volumes:
+#           - /tmp/.X11-unix:/tmp/.X11-unix
+#           - .:/opt/opendlv.data
+#       network_mode: host
+#       ipc: host
+#       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID} --id=1"
+#
+# # microservice for knowledge-v2vcam
+#    knowledge-v2vcam0:
+#        build: .
+#        working_dir: /opt/opendlv.data/
+#        volumes:
+#            - /tmp/.X11-unix:/tmp/.X11-unix
+#            - .:/opt/opendlv.data
+#        network_mode: host
+#        ipc: host
+#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID}"
+#
+# # microservice for knowledge-v2vcam
+#    knowledge-v2vcam1:
+#        build: .
+#        working_dir: /opt/opendlv.data/
+#        volumes:
+#            - /tmp/.X11-unix:/tmp/.X11-unix
+#            - .:/opt/opendlv.data
+#        network_mode: host
+#        ipc: host
+#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID} --id=1"
