Add support for Crash UC and create data processing methods

--- a/usecases/latest/test-smartvehicle/docker-compose.yml
+++ b/usecases/latest/test-smartvehicle/docker-compose.yml
@@ -38,7 +38,7 @@ services:
             - .:/opt/opendlv.data
         network_mode: host
         ipc: host
-        command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamclient --id=3 --cid=${CID}"
+        command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamclient --id=3 --cid=${CID} --freq=10"
 
  # microservice for adaptation-ksamserver
     adaptation-ksamserver:
@@ -51,20 +51,20 @@ services:
             - .:/opt/opendlv.data
         network_mode: host
         ipc: host
-        command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamserver --id=4 --cid=${CID}"
+        command: "/opt/opendlv/bin/opendlv-logic-adaptation-ksamserver --id=4 --cid=${CID} --freq=10"
 
- # microservice for knowledge-v2vdenm -- use for the CRASH use case
-    knowledge-v2vdenm0:
-       build: .
-       working_dir: /opt/opendlv.data/
-       volumes:
-           - /tmp/.X11-unix:/tmp/.X11-unix
-           - .:/opt/opendlv.data
-       network_mode: host
-       ipc: host
-       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID}"
+ # microservice for knowledge-v2vdenm -- is used in ROAD EVENT UC as witness
+#    knowledge-v2vdenm0:
+#       build: .
+#       working_dir: /opt/opendlv.data/
+#       volumes:
+#           - /tmp/.X11-unix:/tmp/.X11-unix
+#           - .:/opt/opendlv.data
+#       network_mode: host
+#       ipc: host
+#       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID} --freq=10"
 
- # microservice for knowledge-v2vdenm -- use for the CRASH use case
+ # microservice for knowledge-v2vdenm -- is used in ROAD EVENT UC as witness
 #    knowledge-v2vdenm1:
 #       build: .
 #       working_dir: /opt/opendlv.data/
@@ -75,7 +75,8 @@ services:
 #       ipc: host
 #       command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vdenm --cid=${CID} --id=1" #second vehicle
 
- # microservice for knowledge-v2vcam
+###### V2V CAM is used only in ROAD EVENT UC (structural adaptation)
+##  microservice for knowledge-v2vcam
 #    knowledge-v2vcam0:
 #        build: .
 #        working_dir: /opt/opendlv.data/
@@ -84,8 +85,8 @@ services:
 #            - .:/opt/opendlv.data
 #        network_mode: host
 #        ipc: host
-#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID}"
-
+#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID} --freq=10"
+#
 # # microservice for knowledge-v2vcam
 #    knowledge-v2vcam1:
 #        build: .
@@ -95,4 +96,4 @@ services:
 #            - .:/opt/opendlv.data
 #        network_mode: host
 #        ipc: host
-#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID} --id=1" #second vehicle
+#        command: "/opt/opendlv/bin/opendlv-logic-knowledge-v2vcam --cid=${CID} --id=1 --freq=10" #second vehicle
